set(NAME deps-arcadia-contrib-libs-grpc)
set(BASE ${CMAKE_SOURCE_DIR}/contrib/libs/grpc)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error -DPB_FIELD_16BIT")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-error -DPB_FIELD_16BIT")

set(SRCS_CORE
  ${BASE}/src/core/ext/census/grpc_context.cc
  ${BASE}/src/core/ext/filters/client_channel/backup_poller.cc
  ${BASE}/src/core/ext/filters/client_channel/channel_connectivity.cc
  ${BASE}/src/core/ext/filters/client_channel/client_channel.cc
  ${BASE}/src/core/ext/filters/client_channel/client_channel_factory.cc
  ${BASE}/src/core/ext/filters/client_channel/client_channel_plugin.cc
  ${BASE}/src/core/ext/filters/client_channel/connector.cc
  ${BASE}/src/core/ext/filters/client_channel/http_connect_handshaker.cc
  ${BASE}/src/core/ext/filters/client_channel/http_proxy.cc
  ${BASE}/src/core/ext/filters/client_channel/lb_policy.cc
  ${BASE}/src/core/ext/filters/client_channel/lb_policy/grpclb/client_load_reporting_filter.cc
  ${BASE}/src/core/ext/filters/client_channel/lb_policy/grpclb/grpclb.cc
  ${BASE}/src/core/ext/filters/client_channel/lb_policy/grpclb/grpclb_channel_secure.cc
  ${BASE}/src/core/ext/filters/client_channel/lb_policy/grpclb/grpclb_client_stats.cc
  ${BASE}/src/core/ext/filters/client_channel/lb_policy/grpclb/load_balancer_api.cc
  ${BASE}/src/core/#ext/filters/client_channel/lb_policy/grpclb/proto/grpc/lb/v1/load_balancer.pb.c
  ${BASE}/src/core/load_balancer.pb.c
  ${BASE}/src/core/ext/filters/client_channel/lb_policy/pick_first/pick_first.cc
  ${BASE}/src/core/ext/filters/client_channel/lb_policy/round_robin/round_robin.cc
  ${BASE}/src/core/ext/filters/client_channel/lb_policy_factory.cc
  ${BASE}/src/core/ext/filters/client_channel/lb_policy_registry.cc
  ${BASE}/src/core/ext/filters/client_channel/method_params.cc
  ${BASE}/src/core/ext/filters/client_channel/parse_address.cc
  ${BASE}/src/core/ext/filters/client_channel/proxy_mapper.cc
  ${BASE}/src/core/ext/filters/client_channel/proxy_mapper_registry.cc
  ${BASE}/src/core/ext/filters/client_channel/resolver.cc
  ${BASE}/src/core/ext/filters/client_channel/resolver/dns/native/dns_resolver.cc
  ${BASE}/src/core/ext/filters/client_channel/resolver/fake/fake_resolver.cc
  ${BASE}/src/core/ext/filters/client_channel/resolver/sockaddr/sockaddr_resolver.cc
  ${BASE}/src/core/ext/filters/client_channel/resolver_registry.cc
  ${BASE}/src/core/ext/filters/client_channel/retry_throttle.cc
  ${BASE}/src/core/ext/filters/client_channel/subchannel.cc
  ${BASE}/src/core/ext/filters/client_channel/subchannel_index.cc
  ${BASE}/src/core/ext/filters/client_channel/uri_parser.cc
  ${BASE}/src/core/ext/filters/deadline/deadline_filter.cc
  ${BASE}/src/core/ext/filters/http/client/http_client_filter.cc
  ${BASE}/src/core/ext/filters/http/client_authority_filter.cc
  ${BASE}/src/core/ext/filters/http/http_filters_plugin.cc
  ${BASE}/src/core/ext/filters/http/message_compress/message_compress_filter.cc
  ${BASE}/src/core/ext/filters/http/server/http_server_filter.cc
  ${BASE}/src/core/ext/filters/load_reporting/server_load_reporting_filter.cc
  ${BASE}/src/core/ext/filters/load_reporting/server_load_reporting_plugin.cc
  ${BASE}/src/core/ext/filters/max_age/max_age_filter.cc
  ${BASE}/src/core/ext/filters/message_size/message_size_filter.cc
  ${BASE}/src/core/ext/filters/workarounds/workaround_cronet_compression_filter.cc
  ${BASE}/src/core/ext/filters/workarounds/workaround_utils.cc
  ${BASE}/src/core/ext/transport/chttp2/alpn/alpn.cc
  ${BASE}/src/core/ext/transport/chttp2/client/authority.cc
  ${BASE}/src/core/ext/transport/chttp2/client/chttp2_connector.cc
  ${BASE}/src/core/ext/transport/chttp2/client/insecure/channel_create.cc
  ${BASE}/src/core/ext/transport/chttp2/client/insecure/channel_create_posix.cc
  ${BASE}/src/core/ext/transport/chttp2/client/secure/secure_channel_create.cc
  ${BASE}/src/core/ext/transport/chttp2/server/chttp2_server.cc
  ${BASE}/src/core/ext/transport/chttp2/server/insecure/server_chttp2.cc
  ${BASE}/src/core/ext/transport/chttp2/server/insecure/server_chttp2_posix.cc
  ${BASE}/src/core/ext/transport/chttp2/server/secure/server_secure_chttp2.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/bin_decoder.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/bin_encoder.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/chttp2_plugin.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/chttp2_transport.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/flow_control.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/frame_data.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/frame_goaway.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/frame_ping.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/frame_rst_stream.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/frame_settings.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/frame_window_update.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/hpack_encoder.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/hpack_parser.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/hpack_table.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/http2_settings.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/huffsyms.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/incoming_metadata.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/parsing.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/stream_lists.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/stream_map.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/varint.cc
  ${BASE}/src/core/ext/transport/chttp2/transport/writing.cc
  ${BASE}/src/core/ext/transport/inproc/inproc_plugin.cc
  ${BASE}/src/core/ext/transport/inproc/inproc_transport.cc
  ${BASE}/src/core/lib/avl/avl.cc
  ${BASE}/src/core/lib/backoff/backoff.cc
  ${BASE}/src/core/lib/channel/channel_args.cc
  ${BASE}/src/core/lib/channel/channel_stack.cc
  ${BASE}/src/core/lib/channel/channel_stack_builder.cc
  ${BASE}/src/core/lib/channel/channel_trace.cc
  ${BASE}/src/core/lib/channel/channel_trace_registry.cc
  ${BASE}/src/core/lib/channel/connected_channel.cc
  ${BASE}/src/core/lib/channel/handshaker.cc
  ${BASE}/src/core/lib/channel/handshaker_factory.cc
  ${BASE}/src/core/lib/channel/handshaker_registry.cc
  ${BASE}/src/core/lib/channel/status_util.cc
  ${BASE}/src/core/lib/compression/compression.cc
  ${BASE}/src/core/lib/compression/compression_internal.cc
  ${BASE}/src/core/lib/compression/message_compress.cc
  ${BASE}/src/core/lib/compression/stream_compression.cc
  ${BASE}/src/core/lib/compression/stream_compression_gzip.cc
  ${BASE}/src/core/lib/compression/stream_compression_identity.cc
  ${BASE}/src/core/lib/debug/stats.cc
  ${BASE}/src/core/lib/debug/stats_data.cc
  ${BASE}/src/core/lib/debug/trace.cc
  ${BASE}/src/core/lib/gpr/alloc.cc
  ${BASE}/src/core/lib/gpr/arena.cc
  ${BASE}/src/core/lib/gpr/atm.cc
  ${BASE}/src/core/lib/gpr/cpu_iphone.cc
  ${BASE}/src/core/lib/gpr/cpu_linux.cc
  ${BASE}/src/core/lib/gpr/cpu_posix.cc
  ${BASE}/src/core/lib/gpr/cpu_windows.cc
  ${BASE}/src/core/lib/gpr/env_linux.cc
  ${BASE}/src/core/lib/gpr/env_posix.cc
  ${BASE}/src/core/lib/gpr/env_windows.cc
  ${BASE}/src/core/lib/gpr/fork.cc
  ${BASE}/src/core/lib/gpr/host_port.cc
  ${BASE}/src/core/lib/gpr/log.cc
  ${BASE}/src/core/lib/gpr/log_android.cc
  ${BASE}/src/core/lib/gpr/log_linux.cc
  ${BASE}/src/core/lib/gpr/log_posix.cc
  ${BASE}/src/core/lib/gpr/log_windows.cc
  ${BASE}/src/core/lib/gpr/mpscq.cc
  ${BASE}/src/core/lib/gpr/murmur_hash.cc
  ${BASE}/src/core/lib/gpr/string.cc
  ${BASE}/src/core/lib/gpr/string_posix.cc
  ${BASE}/src/core/lib/gpr/string_util_windows.cc
  ${BASE}/src/core/lib/gpr/string_windows.cc
  ${BASE}/src/core/lib/gpr/sync.cc
  ${BASE}/src/core/lib/gpr/sync_posix.cc
  ${BASE}/src/core/lib/gpr/sync_windows.cc
  ${BASE}/src/core/lib/gpr/time.cc
  ${BASE}/src/core/lib/gpr/time_posix.cc
  ${BASE}/src/core/lib/gpr/time_precise.cc
  ${BASE}/src/core/lib/gpr/time_windows.cc
  ${BASE}/src/core/lib/gpr/tls_pthread.cc
  ${BASE}/src/core/lib/gpr/tmpfile_msys.cc
  ${BASE}/src/core/lib/gpr/tmpfile_posix.cc
  ${BASE}/src/core/lib/gpr/tmpfile_windows.cc
  ${BASE}/src/core/lib/gpr/wrap_memcpy.cc
  ${BASE}/src/core/lib/gprpp/thd_posix.cc
  ${BASE}/src/core/lib/gprpp/thd_windows.cc
  ${BASE}/src/core/lib/http/format_request.cc
  ${BASE}/src/core/lib/http/httpcli.cc
  ${BASE}/src/core/lib/http/httpcli_security_connector.cc
  ${BASE}/src/core/lib/http/parser.cc
  ${BASE}/src/core/lib/iomgr/call_combiner.cc
  ${BASE}/src/core/lib/iomgr/combiner.cc
  ${BASE}/src/core/lib/iomgr/endpoint.cc
  ${BASE}/src/core/lib/iomgr/endpoint_pair_posix.cc
  ${BASE}/src/core/lib/iomgr/endpoint_pair_uv.cc
  ${BASE}/src/core/lib/iomgr/endpoint_pair_windows.cc
  ${BASE}/src/core/lib/iomgr/error.cc
  ${BASE}/src/core/lib/iomgr/ev_epoll1_linux.cc
  ${BASE}/src/core/lib/iomgr/ev_epollex_linux.cc
  ${BASE}/src/core/lib/iomgr/ev_epollsig_linux.cc
  ${BASE}/src/core/lib/iomgr/ev_poll_posix.cc
  ${BASE}/src/core/lib/iomgr/ev_posix.cc
  ${BASE}/src/core/lib/iomgr/ev_windows.cc
  ${BASE}/src/core/lib/iomgr/exec_ctx.cc
  ${BASE}/src/core/lib/iomgr/executor.cc
  ${BASE}/src/core/lib/iomgr/fork_posix.cc
  ${BASE}/src/core/lib/iomgr/fork_windows.cc
  ${BASE}/src/core/lib/iomgr/gethostname_fallback.cc
  ${BASE}/src/core/lib/iomgr/gethostname_host_name_max.cc
  ${BASE}/src/core/lib/iomgr/gethostname_sysconf.cc
  ${BASE}/src/core/lib/iomgr/iocp_windows.cc
  ${BASE}/src/core/lib/iomgr/iomgr.cc
  ${BASE}/src/core/lib/iomgr/iomgr_custom.cc
  ${BASE}/src/core/lib/iomgr/iomgr_internal.cc
  ${BASE}/src/core/lib/iomgr/iomgr_posix.cc
  ${BASE}/src/core/lib/iomgr/iomgr_uv.cc
  ${BASE}/src/core/lib/iomgr/iomgr_windows.cc
  ${BASE}/src/core/lib/iomgr/is_epollexclusive_available.cc
  ${BASE}/src/core/lib/iomgr/load_file.cc
  ${BASE}/src/core/lib/iomgr/lockfree_event.cc
  ${BASE}/src/core/lib/iomgr/network_status_tracker.cc
  ${BASE}/src/core/lib/iomgr/polling_entity.cc
  ${BASE}/src/core/lib/iomgr/pollset.cc
  ${BASE}/src/core/lib/iomgr/pollset_custom.cc
  ${BASE}/src/core/lib/iomgr/pollset_set.cc
  ${BASE}/src/core/lib/iomgr/pollset_set_custom.cc
  ${BASE}/src/core/lib/iomgr/pollset_set_windows.cc
  ${BASE}/src/core/lib/iomgr/pollset_uv.cc
  ${BASE}/src/core/lib/iomgr/pollset_windows.cc
  ${BASE}/src/core/lib/iomgr/resolve_address.cc
  ${BASE}/src/core/lib/iomgr/resolve_address_custom.cc
  ${BASE}/src/core/lib/iomgr/resolve_address_posix.cc
  ${BASE}/src/core/lib/iomgr/resolve_address_windows.cc
  ${BASE}/src/core/lib/iomgr/resource_quota.cc
  ${BASE}/src/core/lib/iomgr/sockaddr_utils.cc
  ${BASE}/src/core/lib/iomgr/socket_factory_posix.cc
  ${BASE}/src/core/lib/iomgr/socket_mutator.cc
  ${BASE}/src/core/lib/iomgr/socket_utils_common_posix.cc
  ${BASE}/src/core/lib/iomgr/socket_utils_linux.cc
  ${BASE}/src/core/lib/iomgr/socket_utils_posix.cc
  ${BASE}/src/core/lib/iomgr/socket_utils_uv.cc
  ${BASE}/src/core/lib/iomgr/socket_utils_windows.cc
  ${BASE}/src/core/lib/iomgr/socket_windows.cc
  ${BASE}/src/core/lib/iomgr/tcp_client.cc
  ${BASE}/src/core/lib/iomgr/tcp_client_custom.cc
  ${BASE}/src/core/lib/iomgr/tcp_client_posix.cc
  ${BASE}/src/core/lib/iomgr/tcp_client_windows.cc
  ${BASE}/src/core/lib/iomgr/tcp_custom.cc
  ${BASE}/src/core/lib/iomgr/tcp_posix.cc
  ${BASE}/src/core/lib/iomgr/tcp_server.cc
  ${BASE}/src/core/lib/iomgr/tcp_server_custom.cc
  ${BASE}/src/core/lib/iomgr/tcp_server_posix.cc
  ${BASE}/src/core/lib/iomgr/tcp_server_utils_posix_common.cc
  ${BASE}/src/core/lib/iomgr/tcp_server_utils_posix_ifaddrs.cc
  ${BASE}/src/core/lib/iomgr/tcp_server_utils_posix_noifaddrs.cc
  ${BASE}/src/core/lib/iomgr/tcp_server_windows.cc
  ${BASE}/src/core/lib/iomgr/tcp_uv.cc
  ${BASE}/src/core/lib/iomgr/tcp_windows.cc
  ${BASE}/src/core/lib/iomgr/time_averaged_stats.cc
  ${BASE}/src/core/lib/iomgr/timer.cc
  ${BASE}/src/core/lib/iomgr/timer_custom.cc
  ${BASE}/src/core/lib/iomgr/timer_generic.cc
  ${BASE}/src/core/lib/iomgr/timer_heap.cc
  ${BASE}/src/core/lib/iomgr/timer_manager.cc
  ${BASE}/src/core/lib/iomgr/timer_uv.cc
  ${BASE}/src/core/lib/iomgr/udp_server.cc
  ${BASE}/src/core/lib/iomgr/unix_sockets_posix.cc
  ${BASE}/src/core/lib/iomgr/unix_sockets_posix_noop.cc
  ${BASE}/src/core/lib/iomgr/wakeup_fd_cv.cc
  ${BASE}/src/core/lib/iomgr/wakeup_fd_eventfd.cc
  ${BASE}/src/core/lib/iomgr/wakeup_fd_nospecial.cc
  ${BASE}/src/core/lib/iomgr/wakeup_fd_pipe.cc
  ${BASE}/src/core/lib/iomgr/wakeup_fd_posix.cc
  ${BASE}/src/core/lib/json/json.cc
  ${BASE}/src/core/lib/json/json_reader.cc
  ${BASE}/src/core/lib/json/json_string.cc
  ${BASE}/src/core/lib/json/json_writer.cc
  ${BASE}/src/core/lib/profiling/basic_timers.cc
  ${BASE}/src/core/lib/profiling/stap_timers.cc
  ${BASE}/src/core/lib/security/context/security_context.cc
  ${BASE}/src/core/lib/security/credentials/alts/alts_credentials.cc
  ${BASE}/src/core/lib/security/credentials/alts/check_gcp_environment.cc
  ${BASE}/src/core/lib/security/credentials/alts/check_gcp_environment_linux.cc
  ${BASE}/src/core/lib/security/credentials/alts/check_gcp_environment_no_op.cc
  ${BASE}/src/core/lib/security/credentials/alts/check_gcp_environment_windows.cc
  ${BASE}/src/core/lib/security/credentials/alts/grpc_alts_credentials_client_options.cc
  ${BASE}/src/core/lib/security/credentials/alts/grpc_alts_credentials_options.cc
  ${BASE}/src/core/lib/security/credentials/alts/grpc_alts_credentials_server_options.cc
  ${BASE}/src/core/lib/security/credentials/composite/composite_credentials.cc
  ${BASE}/src/core/lib/security/credentials/credentials.cc
  ${BASE}/src/core/lib/security/credentials/credentials_metadata.cc
  ${BASE}/src/core/lib/security/credentials/fake/fake_credentials.cc
  ${BASE}/src/core/lib/security/credentials/google_default/credentials_generic.cc
  ${BASE}/src/core/lib/security/credentials/google_default/google_default_credentials.cc
  ${BASE}/src/core/lib/security/credentials/iam/iam_credentials.cc
  ${BASE}/src/core/lib/security/credentials/jwt/json_token.cc
  ${BASE}/src/core/lib/security/credentials/jwt/jwt_credentials.cc
  ${BASE}/src/core/lib/security/credentials/jwt/jwt_verifier.cc
  ${BASE}/src/core/lib/security/credentials/oauth2/oauth2_credentials.cc
  ${BASE}/src/core/lib/security/credentials/plugin/plugin_credentials.cc
  ${BASE}/src/core/lib/security/credentials/ssl/ssl_credentials.cc
  ${BASE}/src/core/lib/security/security_connector/alts_security_connector.cc
  ${BASE}/src/core/lib/security/security_connector/security_connector.cc
  ${BASE}/src/core/lib/security/transport/client_auth_filter.cc
  ${BASE}/src/core/lib/security/transport/secure_endpoint.cc
  ${BASE}/src/core/lib/security/transport/security_handshaker.cc
  ${BASE}/src/core/lib/security/transport/server_auth_filter.cc
  ${BASE}/src/core/lib/security/transport/target_authority_table.cc
  ${BASE}/src/core/lib/security/transport/tsi_error.cc
  ${BASE}/src/core/lib/security/util/json_util.cc
  ${BASE}/src/core/lib/slice/b64.cc
  ${BASE}/src/core/lib/slice/percent_encoding.cc
  ${BASE}/src/core/lib/slice/slice.cc
  ${BASE}/src/core/lib/slice/slice_buffer.cc
  ${BASE}/src/core/lib/slice/slice_intern.cc
  ${BASE}/src/core/lib/slice/slice_string_helpers.cc
  ${BASE}/src/core/lib/surface/api_trace.cc
  ${BASE}/src/core/lib/surface/byte_buffer.cc
  ${BASE}/src/core/lib/surface/byte_buffer_reader.cc
  ${BASE}/src/core/lib/surface/call.cc
  ${BASE}/src/core/lib/surface/call_details.cc
  ${BASE}/src/core/lib/surface/call_log_batch.cc
  ${BASE}/src/core/lib/surface/channel.cc
  ${BASE}/src/core/lib/surface/channel_init.cc
  ${BASE}/src/core/lib/surface/channel_ping.cc
  ${BASE}/src/core/lib/surface/channel_stack_type.cc
  ${BASE}/src/core/lib/surface/completion_queue.cc
  ${BASE}/src/core/lib/surface/completion_queue_factory.cc
  ${BASE}/src/core/lib/surface/event_string.cc
  ${BASE}/src/core/lib/surface/init.cc
  ${BASE}/src/core/lib/surface/init_secure.cc
  ${BASE}/src/core/lib/surface/lame_client.cc
  ${BASE}/src/core/lib/surface/metadata_array.cc
  ${BASE}/src/core/lib/surface/server.cc
  ${BASE}/src/core/lib/surface/validate_metadata.cc
  ${BASE}/src/core/lib/surface/version.cc
  ${BASE}/src/core/lib/transport/bdp_estimator.cc
  ${BASE}/src/core/lib/transport/byte_stream.cc
  ${BASE}/src/core/lib/transport/connectivity_state.cc
  ${BASE}/src/core/lib/transport/error_utils.cc
  ${BASE}/src/core/lib/transport/metadata.cc
  ${BASE}/src/core/lib/transport/metadata_batch.cc
  ${BASE}/src/core/lib/transport/pid_controller.cc
  ${BASE}/src/core/lib/transport/service_config.cc
  ${BASE}/src/core/lib/transport/static_metadata.cc
  ${BASE}/src/core/lib/transport/status_conversion.cc
  ${BASE}/src/core/lib/transport/status_metadata.cc
  ${BASE}/src/core/lib/transport/timeout_encoding.cc
  ${BASE}/src/core/lib/transport/transport.cc
  ${BASE}/src/core/lib/transport/transport_op_string.cc
  ${BASE}/src/core/plugin_registry/grpc_plugin_registry.cc
  ${BASE}/src/core/plugin_registry/grpc_unsecure_plugin_registry.cc
  ${BASE}/src/core/tsi/alts/crypt/aes_gcm.cc
  ${BASE}/src/core/tsi/alts/crypt/gsec.cc
  ${BASE}/src/core/tsi/alts/frame_protector/alts_counter.cc
  ${BASE}/src/core/tsi/alts/frame_protector/alts_crypter.cc
  ${BASE}/src/core/tsi/alts/frame_protector/alts_frame_protector.cc
  ${BASE}/src/core/tsi/alts/frame_protector/alts_record_protocol_crypter_common.cc
  ${BASE}/src/core/tsi/alts/frame_protector/alts_seal_privacy_integrity_crypter.cc
  ${BASE}/src/core/tsi/alts/frame_protector/alts_unseal_privacy_integrity_crypter.cc
  ${BASE}/src/core/tsi/alts/frame_protector/frame_handler.cc
  ${BASE}/src/core/tsi/alts/handshaker/alts_handshaker_client.cc
  ${BASE}/src/core/tsi/alts/handshaker/alts_handshaker_service_api.cc
  ${BASE}/src/core/tsi/alts/handshaker/alts_handshaker_service_api_util.cc
  ${BASE}/src/core/tsi/alts/handshaker/alts_tsi_event.cc
  ${BASE}/src/core/tsi/alts/handshaker/alts_tsi_handshaker.cc
  ${BASE}/src/core/tsi/alts/handshaker/alts_tsi_utils.cc
  ${BASE}/src/core/tsi/alts/handshaker/altscontext.pb.c
  ${BASE}/src/core/tsi/alts/handshaker/handshaker.pb.c
  ${BASE}/src/core/tsi/alts/handshaker/transport_security_common.pb.c
  ${BASE}/src/core/tsi/alts/handshaker/transport_security_common_api.cc
  ${BASE}/src/core/alts_grpc_integrity_only_record_protocol.cc
  ${BASE}/src/core/alts_grpc_privacy_integrity_record_protocol.cc
  ${BASE}/src/core/tsi/alts/zero_copy_frame_protector/alts_grpc_record_protocol_common.cc
  ${BASE}/src/core/tsi/alts/zero_copy_frame_protector/alts_iovec_record_protocol.cc
  ${BASE}/src/core/tsi/alts/zero_copy_frame_protector/alts_zero_copy_grpc_protector.cc
  ${BASE}/src/core/tsi/alts_transport_security.cc
  ${BASE}/src/core/tsi/fake_transport_security.cc
  ${BASE}/src/core/tsi/ssl/session_cache/ssl_session_boringssl.cc
  ${BASE}/src/core/tsi/ssl/session_cache/ssl_session_cache.cc
  ${BASE}/src/core/tsi/ssl/session_cache/ssl_session_openssl.cc
  ${BASE}/src/core/tsi/ssl_transport_security.cc
  ${BASE}/src/core/tsi/transport_security.cc
  ${BASE}/src/core/tsi/transport_security_adapter.cc
  ${BASE}/src/core/tsi/transport_security_grpc.cc

  ${BASE}/src/cpp/client/channel_cc.cc
  ${BASE}/src/cpp/client/client_context.cc
  ${BASE}/src/cpp/client/create_channel.cc
  ${BASE}/src/cpp/client/create_channel_internal.cc
  ${BASE}/src/cpp/client/create_channel_posix.cc
  ${BASE}/src/cpp/client/credentials_cc.cc
  ${BASE}/src/cpp/client/generic_stub.cc
  ${BASE}/src/cpp/client/insecure_credentials.cc
  ${BASE}/src/cpp/client/secure_credentials.cc
  ${BASE}/src/cpp/codegen/codegen_init.cc
  ${BASE}/src/cpp/common/alarm.cc
  ${BASE}/src/cpp/common/auth_property_iterator.cc
  ${BASE}/src/cpp/common/channel_arguments.cc
  ${BASE}/src/cpp/common/channel_filter.cc
  ${BASE}/src/cpp/common/completion_queue_cc.cc
  ${BASE}/src/cpp/common/core_codegen.cc
  ${BASE}/src/cpp/common/resource_quota_cc.cc
  ${BASE}/src/cpp/common/rpc_method.cc
  ${BASE}/src/cpp/common/secure_auth_context.cc
  ${BASE}/src/cpp/common/secure_channel_arguments.cc
  ${BASE}/src/cpp/common/secure_create_auth_context.cc
  ${BASE}/src/cpp/common/version_cc.cc
  ${BASE}/src/cpp/server/async_generic_service.cc
  ${BASE}/src/cpp/server/channel_argument_option.cc
  ${BASE}/src/cpp/server/create_default_thread_pool.cc
  ${BASE}/src/cpp/server/dynamic_thread_pool.cc
  ${BASE}/src/cpp/server/health/default_health_check_service.cc
  ${BASE}/src/cpp/server/health/health.pb.c
  ${BASE}/src/cpp/server/health/health_check_service.cc
  ${BASE}/src/cpp/server/health/health_check_service_server_builder_option.cc
  ${BASE}/src/cpp/server/insecure_server_credentials.cc
  ${BASE}/src/cpp/server/load_reporter/load_data_store.cc
  ${BASE}/src/cpp/server/secure_server_credentials.cc
  ${BASE}/src/cpp/server/server_builder.cc
  ${BASE}/src/cpp/server/server_cc.cc
  ${BASE}/src/cpp/server/server_context.cc
  ${BASE}/src/cpp/server/server_credentials.cc
  ${BASE}/src/cpp/server/server_posix.cc
  ${BASE}/src/cpp/thread_manager/thread_manager.cc
  ${BASE}/src/cpp/util/byte_buffer_cc.cc
  ${BASE}/src/cpp/util/status.cc
  ${BASE}/src/cpp/util/string_ref.cc
  ${BASE}/src/cpp/util/time_cc.cc
)

SET(DEPENDENCIES
  deps-arcadia-contrib-libs-nanopb
  deps-arcadia-contrib-libs-openssl
  deps-arcadia-contrib-libs-zlib
)

include_directories(
  ${CMAKE_SOURCE_DIR}
  ${BASE}
  ${BASE}/include
  ${CMAKE_SOURCE_DIR}/contrib/libs/openssl/include
)


# Static library

add_library(${NAME}-core STATIC ${SRCS_CORE})

target_link_libraries(${NAME}-core
  ${DEPENDENCIES}
)

#set_source_files_properties(${SRCS_CORE} PROPERTIES LANGUAGE C)
#set_target_properties(${NAME}-core PROPERTIES COMPILE_FLAGS --std=c99)


# Python

if (${YT_BUILD_HAVE_CYTHON})
  check_python_kind("2_7" "/usr/include/python2.7")
  cython(${BASE}/src/python/grpcio/grpc/_cython/cygrpc)
  target_link_libraries(cygrpc
    ${NAME}-core
    -lrt
    deps-arcadia-util
  )

  exec_program(
    ${CMAKE_COMMAND} ARGS -E create_symlink
    ${BASE}/src/python/grpcio/grpc
    ${CMAKE_SOURCE_DIR}/python/grpc
  )
  exec_program(
    ${CMAKE_COMMAND} ARGS -E create_symlink
    ${LIBRARY_OUTPUT_PATH}/libcygrpc.so
    ${CMAKE_SOURCE_DIR}/python/grpc/_cython/cygrpc.so
  )


  # Python protoc plugin

  add_executable(grpc_python
    ${BASE}/src/compiler/python_plugin.cc
    ${BASE}/src/compiler/python_generator.cc
  )

  SET(PROTOBUF_DIR ${CMAKE_SOURCE_DIR}/contrib/libs/protobuf)
  set_target_properties(grpc_python
    PROPERTIES
    COMPILE_FLAGS "-I${PROTOBUF_DIR} -I${PROTOBUF_DIR}/google/protobuf"
  )
  target_link_libraries(grpc_python
    deps-arcadia-contrib-libs-protobuf-protoc
  )
endif()
